add input field and submit button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <section class='sortTable'>
     </section>
     <section class='control'>
+      <section class='user'>
+        <p>Enter the amount of numbers  you would like to generate:</p>
+        <form>
+          <input type='text' placeholder='10' maxlength='3'>
+          <input type='submit'>
+        </form>
+      </section>
       <button id='tenNumbers'>Click Here</br>for ten random numbers</button>
       <button id='sort'>Click Here</br>to sort the numbers</button>
     </section>
