--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
     <section class='sortTable'>
     </section>
     <section class='control'>
-      <section class='user'>
-        <p>Enter the amount of numbers  you would like to generate:</p>
-        <form>
-          <input type='text' placeholder='10' maxlength='3'>
-          <input type='submit'>
-        </form>
+      <section id='userNumber'>
+        <p>Enter the amount of numbers you would like to generate:</p>
+        <input type='text' placeholder='10' maxlength='3'>
+        <button id='submit'>Click Here</br>to </button>
       </section>
       <button id='tenNumbers'>Click Here</br>for ten random numbers</button>
       <button id='sort'>Click Here</br>to sort the numbers</button>
