change input advance button

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <section class='control'>
       <section id='userNumber'>
         <p>Enter the amount of numbers you would like to generate:</p>
-        <input type='text' placeholder='10' maxlength='3'>
-        <button id='submit'>Click Here</br>to </button>
+        <input id='userChoice' type='text' placeholder='10' maxlength='3'>
+        <button id='submit'>Click Here</br>to submit your amount</button>
       </section>
-      <button id='tenNumbers'>Click Here</br>for ten random numbers</button>
+      <button id='tenNumbers'>Click Here</br>to generate your random numbers</button>
       <button id='sort'>Click Here</br>to sort the numbers</button>
     </section>
   </main>
