--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
 </head>
 <body>
   <header>
+    <h1>Number Sort</h1>
   </header>
   <main>
     <section class='sortTable'>
     </section>
     <section class='control'>
       <section id='userNumber'>
-        <p>Enter the amount of numbers you would like to generate:</p>
-        <input id='userChoice' type='text' placeholder='10' maxlength='3'>
-        <button id='submit'>Click Here</br>to submit your amount</button>
+          <p>Enter the amount of numbers you would like to generate:</p>
+          <input id='userChoice' type='text' placeholder='10' maxlength='3'>
+          <button id='submit'>Click Here</br>to submit your amount</button>
       </section>
       <button id='tenNumbers'>Click Here</br>to generate your random numbers</button>
-      <button id='sort'>Click Here</br>to sort the numbers</button>
+      <button id='sortup'>Click Here</br>to sort in ascending order</button>
+      <button id='sortdown'>Click Here</br>to sort in descending order</button>
+      <button id='sort'>Click Here</br>to sort the in the opposite order</button>
     </section>
   </main>
   
